# VllmRoute

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yml
docker/: entrypoint.sh
docker/scripts/: llm_docker_into.sh  llm_docker_run.sh
docs/: architecture.md  benchmark.md  config-guide.md  docker-deploy.md  request-flow.md  tech-stack.md
infra-controller/: CMakeLists.txt
infra-controller/src/: StackFlow.cpp
node/vllm-client/: CMakeLists.txt
node/vllm-client/src/: main.cpp  observability_metrics.cpp  observability_metrics.h
sample/: bench_full_observability.py  bench_p2.py  test.py  vllm_endpoints_demo.json  vllm_model_profiles.example.json  vllm_model_profiles_demo.json
scripts/: build_all.sh  docker_build.sh  docker_run.sh  docker_shell.sh  install_deps_ubuntu.sh  run_unit_manager.sh  run_vllm_client.sh
unit-manager/src/: main.cpp  remote_server.cpp
